--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -511,8 +511,8 @@
   <string name="SETTING">Pengaturan&#8230;</string>
   <string name="SETTINGS">Pengaturan</string>
   <string name="SETTINGS_1">Pengaturan</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">Jika ditutup, maka tidak bisa menerima dorongan WeChat. Unbinding dengan unfollowing "Clever Dog WeChat Official Account".</string>
-  <string name="SETTINGS_Wechat_Switch_Open">Harap fokus pada akun WeChat "Cler Dog WeChat Official Account" dan mengikat, setelah kesuksesan akun WeChat lama tidak akan lagi menerima pesan push.</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">Jika ditutup, maka tidak bisa menerima dorongan WeChat. Unbinding dengan unfollowing \"Clever Dog WeChat Official Account\".</string>
+  <string name="SETTINGS_Wechat_Switch_Open">Harap fokus pada akun WeChat \"Cler Dog WeChat Official Account\" dan mengikat, setelah kesuksesan akun WeChat lama tidak akan lagi menerima pesan push.</string>
   <string name="SETTING_DIRECTION">Arah video</string>
   <string name="SETTING_FREE">Set deteksi gerak dan alarm perangkat</string>
   <string name="SETTING_RECORD">Rekaman video</string>
@@ -563,12 +563,12 @@
   <string name="Start_Failed">Mulai gagal</string>
   <string name="Start_Hotspot">Mulai hotspot</string>
   <string name="Start_Hotspot_Note">Mulai hotspot dapat menyebabkan offline perangkat; Setelah dinyalakan, tunggu lampu biru menyala</string>
-  <string name="Start_Hotspot_Prompt">Pastikan telepon terhubung ke jaringan WiFi "%s" sebelum membuka</string>
+  <string name="Start_Hotspot_Prompt">Pastikan telepon terhubung ke jaringan WiFi \"%s\" sebelum membuka</string>
   <string name="Start_Success">Mulai sukses</string>
   <string name="Start_instructions">Buka instruksinya</string>
   <string name="Start_instructions_A">Dalam Akun Resmi WeChat di email Clever Dog yang mengikat, Anda dapat membuka fungsi ini.</string>
   <string name="Start_instructions_B">Lanjutkan sebagai berikut:</string>
-  <string name="Start_instructions_C">1. Mohon memperhatikan nomor resmi WeChat "Clever Dog WeChat Official Account"</string>
+  <string name="Start_instructions_C">1. Mohon memperhatikan nomor resmi WeChat \"Clever Dog WeChat Official Account\"</string>
   <string name="Start_instructions_D">Metode 1: klik pada WeChat di sudut kanan atas \"+\"> Tambahkan Kontak> Akun Resmi, cari \"Akun Pejabat WeChat Clever Dog\" dan kemudian prihatin.</string>
   <string name="Start_instructions_E">Metode 2: tangkapan layar halaman ini atau simpan kode dua dimensi berikut ke album, di sapaan WeChat menyapu.</string>
   <string name="Start_instructions_F">2. Bind account</string>
@@ -672,7 +672,7 @@
   <string name="Tap1_CameraFun_Timelapse_Tips">Perlu mematikan standby sebelum fotografi selang waktu , anda yakin?</string>
   <string name="Tap1_CameraFun_Timelapse_TipsOption">Yakin</string>
   <string name="Tap1_CameraFun_Timelapse_document">Dapatkan lebih banyak momen&#8211;momen indah dengan fotografi selang waktu</string>
-  <string name="Tap1_CameraFun_Timelapse_hours">%s jam</string>
+  <string name="Tap1_CameraFun_Timelapse_hours">%jam</string>
   <string name="Tap1_CameraFun_UninitializedTips">Gagal membaca Kartu Micro SD</string>
   <string name="Tap1_CameraFun_VideoDirection">Kebalikan</string>
   <string name="Tap1_Camera_BackLiveTips">Back to live</string>
@@ -795,7 +795,7 @@
   <string name="Tap2_Timelapse_fail">File video tidak dapat dihasilkan untuk pemutusan ketika fotografi selang waktu</string>
   <string name="Tap2_Timelapse_screenshot">Tangkap layar Live</string>
   <string name="Tap2_Timelapse_title">Fotografi selang waktu</string>
-  <string name="Tap2_TitleName">Daily Great</string>
+  <string name="Tap2_TitleName">Enjoy Everyday</string>
   <string name="Tap2_share_sharevideo">Saya share video ke kamu</string>
   <string name="Tap2_share_sharevideo_tips">Saya sudah membuat fotografi selang waktu dengan Cleverdog Smart Camera, Lihat!</string>
   <string name="Tap2_share_unabletoshare">Tidak ada Wechat terpasang , tidak bisa bagikan</string>
